fixing some spacing/sizing issues on #cdncult times

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -481,17 +481,9 @@ h1 {
 }
 
 .cdncult_header {
-	text-align: center;
-	text-transform: uppercase;
 	
 	h1 {
 		margin-bottom: 0;
-	}
-	
-	.cdncult-tagline {
-		font-size: 0.9em;
-/* 		font-family: 'Chronicle Cond A', 'Chronicle Cond B'; font-weight: 400; font-style: normal; */
-
 	}
 	
 	a {
